@@ -14,6 +14,9 @@ firefox-trunk (23.0~a1~hg20130512r131644-0ubuntu2) UNRELEASED; urgency=low
     - update debian/build/dump-langpack-control-entries.pl
     - update debian/build/rules.mk
     - update debian/control.in
+  * Don't set stuff that is set by dpkg-buildpackage
+    - update debian/build/config.mk
+    - update debian/build/rules.mk
 
  -- Chris Coulson <chris.coulson@canonical.com>  Wed, 15 May 2013 12:22:10 +0100
 
